hphp/test/zend/good/Zend/tests/ns_029.php.expectf

Fatal error: Cannot declare Foo because the name was explicitly used earlier via a `use' statement on line 2 in %s/ns_029.php on line 4
